--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,13 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 70px;
   padding: 20px;
   color: white;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-intro {
@@ -16,8 +20,23 @@
 }
 
 .main-body {
-  max-width: 960px;
+  max-width: 560px;
   margin: 0 auto;
+}
+
+.main-menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 30px 0;
+  display: flex;
+}
+
+.main-menu li {
+  margin-right: 20px;
+}
+
+.main-menu .active {
+  text-decoration: underline;
 }
 
 .justify-center {
