--- a/src/directory.css
+++ b/src/directory.css
@@ -4,10 +4,10 @@
 }
 
 .directory-list-item {
-  padding: 10px 0;
-  border-top: 1px solid gray;
+  padding: 15px 0;
+  border-top: 1px solid #ddd;
 }
 
 .directory-list-item:last-child {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #ddd;
 }
