--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+ul {
+  padding: 0;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40px;
@@ -48,9 +52,4 @@
 .justify-center {
   display: flex;
   justify-content: center;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
