--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ ul {
   padding: 0;
 }
 
+.unstyled-link {
+  text-decoration: none;
+  color: black !important;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40px;
