--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@ ul {
   padding: 0;
 }
 
+.react-css-collapse-transition {
+  transition: height 250ms cubic-bezier(.4, 0, .2, 1);
+}
+
+.small-container {
+  max-width: 560px;
+  margin: 0 auto 100px;
+}
+
+.medium-container {
+  max-width: 800px;
+  margin: 0 auto 100px;
+}
+
 .unstyled-link {
   text-decoration: none;
   color: black !important;
@@ -29,8 +43,7 @@ ul {
 }
 
 .main-body {
-  max-width: 560px;
-  margin: 0 auto 100px;
+
 }
 
 .main-body img {
